--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "mysql2": "^2.2.5"
   }
 }
