--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "highcharts": "^9.0.1",
     "moment": "^2.29.1",
+    "office-ui-fabric-react": "^7.170.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "swr": "^0.5.5",
     "typescript": "^4.1.2",
