--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "office-ui-fabric-react": "^7.170.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "swr": "^0.5.5",
